added flexbox to css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello, I am Jonathan Leyva. A dedicated full stack developer looking to grow in the tech industry. 
+            <p>Hello, I am Jonathan Leyva. an aspiring software developer. 
+                In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
             </p>
         </section>
         <section id="education">
