fixed id to class

--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 <body>
     <header>
         <h1>Jonathan Leyva</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
     </header>
+    
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
-        <section id="about">
+        <section class="about">
             <h2>About Me</h2>
             <p>Hello, I am Jonathan Leyva. an aspiring software developer. 
                 In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
             </p>
         </section>
-        <section id="education">
+        <section class="education">
             <h2>Education</h2>
             <p>Currently enrolled in UCLA fullstack bootcamp</p>
         </section>
-        <section id="skills">
+        <section class="skills">
             <h2>Skills</h2>
             <ul>
                 <li>HTML</li>
