--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Jonathan Leyva</h1>
     </header>
-    
+
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -24,16 +24,22 @@
     <main>
         <section class="about">
             <h2>About Me</h2>
+            <img src="assets/images/evo-millions-of-viewers-min.png"
+                alt="Crowd of people in a venue" />
             <p>Hello, I am Jonathan Leyva. an aspiring software developer. 
                 In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
             </p>
         </section>
         <section class="education">
             <h2>Education</h2>
+            <img src="assets/images/ucla-profile2021.png"
+                alt="UCLA bootcamp logo" />
             <p>Currently enrolled in UCLA fullstack bootcamp</p>
         </section>
         <section class="skills">
             <h2>Skills</h2>
+            <img src="assets/images/art3.jpg"
+                alt="abstract art with multiple colors" />
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
