--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <main>
         <section class="about">
             <h2>About Me</h2>
-            <img src="assets/images/evo-millions-of-viewers-min.png"
-                alt="Crowd of people in a venue" />
-            <p>Hello, I am Jonathan Leyva. an aspiring software developer. 
+            <img src="assets/images/FqvXx3HaMAAR1pw.jpeg"
+                alt="Picture of Jonathan Leyva" />
+            <p>Hello, I am Jonathan Leyva. an aspiring web developer. 
                 In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
             </p>
         </section>
@@ -46,10 +46,13 @@
                 <li>Javascript</li>
             </ul>
         </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:JonMLeyva@gmail.com">JonMLeyva@gmail.com</a>.</p>
+        <section class="placeholder">
+            <h2>Placeholder</h2>
         </section>
     </main>
+    <footer>
+        <h3>contact</h3>
+        <p>You can reach me at <a href="mailto:JonMLeyva@gmail.com">JonMLeyva@gmail.com</a>.</p>
+    </footer>
 </body>
 </html>
