--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section class="about">
             <h2>About Me</h2>
-            <img src="assets/images/FqvXx3HaMAAR1pw.jpeg"
+            <img src="assets/images/FqvaUFcaEAEhn0Z.jpeg"
                 alt="Picture of Jonathan Leyva" />
             <p>Hello, I am Jonathan Leyva. an aspiring web developer. 
                 In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
@@ -48,6 +48,13 @@
         </section>
         <section class="placeholder">
             <h2>Placeholder</h2>
+            <img src="assets/images/art.jpeg"
+            alt="abstract art" />
+        </section>
+        <section class="placeholder">
+            <h2>Placeholder 2</h2>
+            <img src="assets/images/art2.jpg"
+            alt="abstract art" />
         </section>
     </main>
     <footer>
