--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Jonathan Leyva</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Jonathan Leyva</h1>
@@ -20,46 +22,45 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-
     <main>
-        <section class="about">
+        <aside class="about">
             <h2>About Me</h2>
-            <img src="assets/images/FqvaUFcaEAEhn0Z.jpeg"
-                alt="Picture of Jonathan Leyva" />
-            <p>Hello, I am Jonathan Leyva. an aspiring web developer. 
-                In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as well.
-            </p>
-        </section>
-        <section class="education">
-            <h2>Education</h2>
-            <img src="assets/images/ucla-profile2021.png"
-                alt="UCLA bootcamp logo" />
-            <p>Currently enrolled in UCLA fullstack bootcamp</p>
-        </section>
-        <section class="skills">
-            <h2>Skills</h2>
-            <img src="assets/images/art3.jpg"
-                alt="abstract art with multiple colors" />
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-            </ul>
-        </section>
-        <section class="placeholder">
-            <h2>Placeholder</h2>
-            <img src="assets/images/art.jpeg"
-            alt="abstract art" />
-        </section>
-        <section class="placeholder">
-            <h2>Placeholder 2</h2>
-            <img src="assets/images/art2.jpg"
-            alt="abstract art" />
-        </section>
+            <img src="assets/images/FqvaUFcaEAEhn0Z.jpeg" alt="Picture of Jonathan Leyva" />
+            <p>Hello, I am Jonathan Leyva. an aspiring web developer.
+                In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as
+                well.
+            <p>
+        </aside>
+        <div class="cards">
+
+            <section class="education">
+                <h2>Education</h2>
+                <img src="assets/images/ucla-profile2021.png" alt="UCLA bootcamp logo" />
+                <p>Currently enrolled in UCLA fullstack bootcamp</p>
+            </section>
+            <section class="skills">
+                <h2>Skills</h2>
+                <img src="assets/images/art3.jpg" alt="abstract art with multiple colors" />
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                </ul>
+            </section>
+            <section class="placeholder">
+                <h2>Placeholder</h2>
+                <img src="assets/images/art.jpeg" alt="abstract art" />
+            </section>
+            <section class="placeholder">
+                <h2>Placeholder 2</h2>
+                <img src="assets/images/art2.jpg" alt="abstract art" />
+            </section>
+        </div>
     </main>
     <footer>
         <h3>contact</h3>
         <p>You can reach me at <a href="mailto:JonMLeyva@gmail.com">JonMLeyva@gmail.com</a>.</p>
     </footer>
 </body>
+
 </html>
