added prevouis work

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </ul>
             </section>
             <section class="placeholder">
-                <h2>Placeholder</h2>
-                <img src="assets/images/art.jpeg" alt="abstract art" />
+                <h2>Prevous Work</h2>
+                <img src="assets/images/homeworkscrnshot1.png" alt="abstract art" />
             </section>
             <section class="placeholder">
                 <h2>Placeholder 2</h2>
