--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <a href="#">About</a></li>
+        <a href="#">Education</a></li>
+        <a href="#">Skills</a></li>
     </nav>
     <main>
         <aside class="about">
