change the style of the CSS sheet for the cards/flexbox

--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
         <aside class="about">
             <h2>About Me</h2>
             <img src="assets/images/FqvaUFcaEAEhn0Z.jpeg" alt="Picture of Jonathan Leyva" />
-            <p>Hello, I am Jonathan Leyva. an aspiring web developer.
+            <p>Hello, I am Jonathan Leyva. an aspiring web developer.</p>
+            <p>
                 In my free time, I am a die-hard fighting game fan. Have particapted in multiple tournaments as
                 well.
-            <p>
+            </p>
         </aside>
-        <div class="cards">
+        <div class="production">
 
-            <section class="education">
-                <h2>Education</h2>
+            <section class="card">
+                <header>Education</header>
                 <img src="assets/images/ucla-profile2021.png" alt="UCLA bootcamp logo" />
                 <p>Currently enrolled in UCLA fullstack bootcamp</p>
             </section>
-            <section class="skills">
-                <h2>Skills</h2>
+            <section class="card">
+                <header>Skills</header>
                 <img src="assets/images/art3.jpg" alt="abstract art with multiple colors" />
                 <ul>
                     <li>HTML</li>
@@ -44,12 +45,12 @@
                     <li>Javascript</li>
                 </ul>
             </section>
-            <section class="placeholder">
-                <h2>Prevous Work</h2>
-                <img src="assets/images/homeworkscrnshot1.png" alt="abstract art" />
+            <section class="card">
+                <header>Prevous Work</header>
+                <img src="assets/images/homeworkscrnshot1.png" alt="sample website" />
             </section>
-            <section class="placeholder">
-                <h2>Placeholder 2</h2>
+            <section class="card">
+                <header>Placeholder 2</header>
                 <img src="assets/images/art2.jpg" alt="abstract art" />
             </section>
         </div>
